examples/test/testpolicy7064.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7064
  namespace: namespace428
spec:
  podSelector:
    matchLabels:
      key30: value33
      key48: value34
      key16: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value41
      podSelector:
        matchLabels:
          key38: value9
